# 2048Solver

./: CHANGELOG.md  README.md  solve2048.cabal  x2048.cabal
app/: Game.hs  Main.hs
