cabal-version:      2.4
name:               solve2048
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Giacomo De Lazzari
maintainer:         gdelazzari@aol.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable solve2048
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Game

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.15.0.0, random ^>=1.1
    hs-source-dirs:     app
    default-language:   Haskell2010
    optimization:       2
    ghc-options:        -threaded

